// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`call to action snapshot Call to action: 0 1`] = `
<a
  className="button-0-1-7 button__primary-0-1-8 callToAction-0-1-1 callToAction__primary-0-1-3"
  data-sketch-symbol="Call to action - primary"
  href="https://www.microsoft.com/en-us/"
>
  <span
    className="button_contentRegion-0-1-12"
  >
    Primary call to action
  </span>
  <div
    className="callToAction_glyph-0-1-2"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"-4014.4 1616.998 4.4 8\\">
    <g transform=\\"translate(-4128 1600.698)\\">
        <path d=\\"M140.6,23.9l3.7-3.6-3.7-3.6.4-.4,4,4-4,4Z\\" transform=\\"translate(-27)\\"/>
    </g>
</svg>",
      }
    }
    slot="after"
  />
</a>
`;

exports[`call to action snapshot Call to action: 1 1`] = `
<a
  className="button-0-1-20 button__lightweight-0-1-23 callToAction-0-1-14 callToAction__lightweight-0-1-17"
  data-sketch-symbol="Call to action - lightweight"
  href="https://www.microsoft.com/en-us/"
>
  <span
    className="button_contentRegion-0-1-25"
  >
    Lightweight call to action
  </span>
  <div
    className="callToAction_glyph-0-1-15"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"-4014.4 1616.998 4.4 8\\">
    <g transform=\\"translate(-4128 1600.698)\\">
        <path d=\\"M140.6,23.9l3.7-3.6-3.7-3.6.4-.4,4,4-4,4Z\\" transform=\\"translate(-27)\\"/>
    </g>
</svg>",
      }
    }
    slot="after"
  />
</a>
`;

exports[`call to action snapshot Call to action: 2 1`] = `
<a
  className="button-0-1-33 button__justified-0-1-37 callToAction-0-1-27 callToAction__justified-0-1-31"
  data-sketch-symbol="Call to action - justified"
  href="https://www.microsoft.com/en-us/"
>
  <span
    className="button_contentRegion-0-1-38"
  >
    Secondary call to action
  </span>
  <div
    className="callToAction_glyph-0-1-28"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"-4014.4 1616.998 4.4 8\\">
    <g transform=\\"translate(-4128 1600.698)\\">
        <path d=\\"M140.6,23.9l3.7-3.6-3.7-3.6.4-.4,4,4-4,4Z\\" transform=\\"translate(-27)\\"/>
    </g>
</svg>",
      }
    }
    slot="after"
  />
</a>
`;
